# schemaver

./: .coveragerc  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture_decision.md  bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yaml  code-quality.yaml
docs/: about-schema-versions.md
src/schemaver/: __init__.py  change_lookup.py  changelog.py  cli.py  compare_schemas.py  diff.py  lookup.py  property.py  release.py  schema.py  utils.py  version.py
src/schemaver/diffs/: __init__.py  array.py  base.py  core.py  metadata.py  numeric.py  object.py  property.py  string.py
tests/: __init__.py  helpers.py  ruff.toml
tests/data/: fake_json_schema.txt  valid_json_schema.json
tests/unit_tests/: __init__.py  test_changelog.py  test_cli.py  test_compare_schemas.py  test_install.py  test_release.py  test_schema.py  test_version.py
tests/unit_tests/diffs/: __init__.py  helpers.py  test_array.py  test_base.py  test_core.py  test_metadata.py  test_numeric.py  test_object.py  test_property.py  test_string.py
tests/unit_tests/release/: __init__.py  test_attr_changes.py  test_prop_changes.py  test_summarize.py
